The problem with multiple likes from one user is solved. ErrorCause.ALREADY_LIKED added. Changes in DTOs: - BasePostDto now has likes and comments. - ImgDto renamed to BaseImgDto and FullImgDto added. - CommentDto naw has likes. Comment, Img and Post classes now has utility method getWhoLiked() which are used by their mappers.